# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check_code.yml
gendiff/: __init__.py  file_utils.py  generate_diff.py
gendiff/formatters/: __init__.py  format_json.py  format_plain.py  formatters_utils.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
tests/: test_file_utils.py  test_generate_diff.py
